fix: change api-doc endpoint url
